[gd_scene load_steps=6 format=3 uid="uid://bieq2g32ux1jl"]

[ext_resource type="Script" path="res://components/interaction-object/interaction_object.gd" id="1_2yfp3"]
[ext_resource type="AudioStream" uid="uid://cbwyps10880wo" path="res://assets/placeholder/phoenix-compendium/ui_menu_focus.wav" id="2_kn02b"]
[ext_resource type="AudioStream" uid="uid://bkltp0vvulae5" path="res://assets/placeholder/phoenix-compendium/ui_menu_ok.wav" id="3_rdxdq"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_nja7u"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_3vcfh"]
resource_local_to_scene = true
width = 50
height = 50
noise = SubResource("FastNoiseLite_nja7u")

[node name="InteractionObject" type="Polygon2D"]
z_index = 100
z_as_relative = false
color = Color(1, 1, 1, 0)
polygon = PackedVector2Array(25, 25, 25, -25, -25, -25, -25, 25)
script = ExtResource("1_2yfp3")
size = 25

[node name="ShaderSprite" type="Sprite2D" parent="."]
visible = false
texture = SubResource("NoiseTexture2D_3vcfh")

[node name="InputHandler" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Active" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_kn02b")

[node name="Showing" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_rdxdq")

[connection signal="gui_input" from="InputHandler" to="." method="_on_input_handler_gui_input"]
